--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,5 @@ gradle-app.setting
 **/build/
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+iml,java,kotlin,gradle
+
+.idea/sonarlint
