--- a/build.gradle
+++ b/build.gradle
@@ -27,3 +27,12 @@ configure([compileKotlin, compileTestKotlin]) {
         jvmTarget = "1.8"
     }
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'ru.nsu.fit.jbr.simplifier.MainKt'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
